# atc-rl-pettingzoo

./: .gitignore  ppo_pettingzoo_ma_tc2.py  ppo_pettingzoo_ma_tc2_visualise.py  pyproject.toml
common/: ac_type_one_hot_encoder.joblib  constants.py  data_preprocessing.py  recat_one_hot_encoder.joblib
envs/: tc2_gym_env.py  tc2_pettingzoo_env.py
models/: aircraft_agent.py
utils/: buffers.py  callbacks.py  game_bridge.py  vec_envs.py
